<resources>
    <string name="app_name">Hangman</string>
    <!-- TODO: Remove or change this placeholder text -->
<!--    <string name="hello_blank_fragment">Hello blank fragment</string>-->
    <string name="playButton">Play</string>
    <string name="blankWord">_ _ _ _ _ _ _ _</string>
    <string name="choose_a_letter">Choose a letter</string>
    <string name="a_text">A</string>
    <string name="b_text">B</string>
    <string name="c_text">C</string>
    <string name="d_text">D</string>
    <string name="e_text">E</string>
    <string name="f_text">F</string>
    <string name="g_text">G</string>
    <string name="h_text">H</string>
    <string name="i_text">I</string>
    <string name="j_text">J</string>
    <string name="k_text">K</string>
    <string name="l_text">L</string>
    <string name="m_text">M</string>
    <string name="n_text">N</string>
    <string name="o_text">O</string>
    <string name="p_text">P</string>
    <string name="q_text">Q</string>
    <string name="r_text">R</string>
    <string name="s_text">S</string>
    <string name="t_text">T</string>
    <string name="u_text">U</string>
    <string name="v_text">V</string>
    <string name="w_text">W</string>
    <string name="x_text">X</string>
    <string name="y_text">Y</string>
    <string name="z_text">Z</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>